--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </tr>
 
     <tr>
-  <td>git config --global user.email в</td>
+  <td>git config --global user.email </td>
   <td>встановлює глобально пошту</td>
   </tr>
   <tr>
